# chipy.org

./: .buildpacks  .coveragerc  .dockerignore  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GETTING_STARTED_WITH_DOCKER.md  LICENSE  Makefile  Pipfile  Procfile  README.md  admin.py  dev-requirements.txt  development-requirements.txt  docker-compose.yml  homepage.html  manage.py  meeting.html  models.py  past_meetings.html  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  runtime.txt  setup.cfg
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: formatter.yaml  tests.yaml
chipy/: settings.py
chipy/requirements/: base.txt
chipy/templates/: site_base.html
chipy_org/: context_processors.py  requirements.txt  runner.py  settings.py  settings_test.py  urls.py  views.py  wsgi.py
chipy_org/apps/about/: urls.py
chipy_org/apps/announcements/: admin.py  models.py  tests.py  urls.py  views.py
chipy_org/apps/announcements/migrations/: 0001_initial.py  0001_initial_squashed_0005_remove_announcement_text.py  0002_announcement_end_date.py  0003_announcement_text2.py  0004_move_ckeditor_data_to_field.py  0005_remove_announcement_text.py  0006_rename_text2_announcement_text.py
chipy_org/apps/contact/: forms.py  tests.py  urls.py  views.py
chipy_org/apps/job_board/: admin.py  apps.py  email.py  forms.py  models.py  tests.py  urls.py  views.py
chipy_org/apps/job_board/migrations/: 0001_initial.py  0002_auto_20200409_1441.py  0002_auto_20200729_2154.py  0003_auto_20200409_1559.py  0003_auto_20200730_0453.py  0004_auto_20200412_0312.py  0004_jobpost_is_from_recruiting_agency.py  0005_auto_20200823_0726.py  0005_jobpost_contact.py  0006_auto_20200412_1718.py  0006_auto_20200823_0805.py  0007_auto_20200823_2346.py  0007_jobpost_agree_to_terms.py  0008_auto_20200413_1813.py  0008_auto_20200901_1735.py  0009_auto_20200413_1844.py  0009_jobpost_time_to_expire.py  0010_auto_20200414_2005.py  0010_job_post_copy_data_to_time_to_expire.py  0011_auto_20200414_2201.py  0011_remove_jobpost_days_to_expire.py  0012_auto_20200416_1526.py  0012_auto_20210111_1945.py  0013_add_affiliates_squashed_0014_add_affiliates.py  0014_alter_jobpost_agree_to_terms.py  0015_jobpost_filled_date_jobpost_is_filled_and_more.py
chipy_org/apps/job_board/templates/: after_submit_job_post.html  delete_job_post.html  job_post_detail.html  job_post_form.html  job_post_list.html
chipy_org/apps/job_board/templatetags/: job_board_tags.py
chipy_org/apps/job_board/tests/: conftest.py  test_models.py  test_views.py
chipy_org/apps/main/: admin.py  tests.py  urls.py  views.py
chipy_org/apps/meetings/: admin.py  email.py  feeds.py  forms.py  healthchecks.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
chipy_org/apps/meetings/migrations/: 0001_initial.py  0001_squash_to_0013.py  0001_squashed_0009_alter_topic_description.py  0001_squashed_0015_auto_20200208_1904.py  0002_alter_meeting_in_person_capacity.py  0002_auto_20200217_1825.py  0002_auto__add_field_rsvp_email.py  0002_rename_description2_meeting_description_and_more.py  0002_rsvp_guests.py  0003_auto_20200418_0929.py  0003_auto_20200505_0055.py  0003_auto_20200629_0805.py  0003_auto__add_field_rsvp_key.py  0003_repeatmeeting.py  0003_topic_experience_level.py  0003_topic_python_level.py  0003_topic_requested_reviewer.py  0003_topicdraft.py  0004_add_cc0_license.py  0004_auto_20160222_2205.py  0004_auto_20170205_1355.py  0004_auto_20170417_2021.py  0004_auto_20200326_1630.py  0004_auto_20200812_1937.py  0004_auto__add_field_meeting_key.py  (+55 more)
chipy_org/apps/profiles/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
chipy_org/apps/slack/: forms.py  urls.py  views.py
chipy_org/apps/sponsors/: admin.py  models.py  tests.py  urls.py  views.py
chipy_org/apps/subgroups/: admin.py  models.py  tests.py  urls.py  views.py
chipy_org/apps/talks/: email.py  forms.py  urls.py  views.py
chipy_org/deploy/: wsgi.py
chipy_org/dev_utils/: apps.py  tests.py
chipy_org/libs/: apps.py  custom_captcha.py  custom_ckeditor.py  email.py  middleware.py  models.py  permissions_classes.py  slack_utils.py  social_auth_pipelines.py  test_utils.py
chipy_org/libs/templatetags/: nh3_tags.py
chipy_org/libs/tests/: test_nh3_templatetags.py
chipy_org/requirements/: base.txt
chipy_org/static/css/: chipy.css  custom_contents.css  shiny.css  upcoming_events.css
chipy_org/static/js/: jquery.js  meetup_sync.js
chipy_org/static/less/: chipy-variables.less  chipy.less
chipy_org/templates/: ._rsvp.js.swp  404.html  500.html  _account_bar.html  _footer.html  _homepage.js  _login_options.html  _messages.html  _modal.html  _rsvp.html  _rsvp.js  homepage-old.html  homepage.html  homepage_preview.html  login.html  site_base.html
chipy_org/templates/about/: what_next.html
chipy_org/templates/boxes/: box_create.html  box_edit.html  refresh.html
chipy_org/templates/envelope/: contact.html
chipy_org/templates/flatpages/: default.html
chipy_org/templates/meetings/: past_meetings.html
chipy_org/templates/registration/: login.html
chipy_org/templates/shiny/: _featured_announcement.html  _featured_sponsor.html  _login_options.html  _rsvp.html  homepage.html  navbar.html  site_base.html  slim.html
chipy_org/templates/theme_bootstrap/: base.html  less_base.html
chipy_org/tests/: test_flatblocks.py
custom_flatpages/: admin.py  apps.py  models.py
custom_flatpages/migrations/: 0001_initial.py
docker/: Dockerfile  app-start.sh  docker.env.sample  entrypoint.sh
docker-utils/: app-start.sh  entrypoint.sh
docs/: next_day_video.md
k8s/: README.md  cluster.yaml  helmfile  helmfile.yaml
k8s/helm/chipy-k8s/: Chart.yaml  values.yaml
k8s/helm/postgres/: Chart.yaml
k8s/postgres/: pg-cluster.yaml
k8s/yaml/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  jobs.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
polls/: models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
(+113 files in other folders)
