[build-system]
requires = [
    "hatchling >= 1.10.0",
]
build-backend = "hatchling.build"

[project]
name = "chipy_website"
version="2.4.0"
description = "The ChiPy Website"
objects.license = { text = "MIT License" }
requires-python = ">=3.11.10"
authors = [
    { name = "ChiPy Web Guild", email = "chicago-organizers@python.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
#    "Programming Language :: Python :: 3.12",# TODO: upgrade python
#    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3~=1.35",
    "crispy-bootstrap5~=0.6",
    "dj-database-url==0.5.0",
    "django~=4.1",
    "django-admin-tools~=0.9.0",
    "django-bleach==0.6.1",
    "django-ckeditor",
    "django-crispy-forms~=1.13",
    "django-extensions",
    "django-flatblocks~=1.0.0",
    "django-grappelli~=2.14.0",
    "django-gravatar2==1.4.4",
    "django-honeypot==0.8.0",
    "django-ical==1.7.0",
    "django-simple-captcha==0.5.20",
    "django-storages>=1.13",
    "djangorestframework~=3.14",
    "gunicorn==20.0.4",
    "pillow~=9.0",
    "probablepeople==0.5.4",
    "psycopg2-binary~=2.9",
    "python-openid2==3.2",
    "requests==2.26.0",
    "six==1.14.0",
    "social-auth-app-django==5.4.1",
    "sorl-thumbnail~=12.10",
    "whitenoise==5.0.1",
    "bleach==4.1.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pylint",
    "pylint-django",
    "pytest~=7.0",
    "pytest-django~=4.9",
]

[tool.hatch.build.targets.wheel]
packages = [
    "chipy_org",
]
exclude = [
    "*.pxi",
    "*.pyx",
]

[tool.black]
line-length = 100
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | dist
  | migrations
  | venv
)/
'''

[tool.isort]
atomic = true
include_trailing_comma = true
line_length = 100
multi_line_output = 3
skip = 'manage.py'
skip_glob = '**/migrations/*'
