[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chipy_website"
version="2.4.0"
description = "The ChiPy Website"
objects.license = { text = "MIT License" }
requires-python = ">=3.11.10"
authors = [
    { name = "ChiPy Web Guild", email = "chicago-organizers@python.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
#    "Programming Language :: Python :: 3.12",# TODO: upgrade python
#    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "boto3",
    "crispy-bootstrap5",
    "dj-database-url",
    "django",
    "django-admin-tools",
    "django-bleach",
    "django-ckeditor",
    "django-crispy-forms",
    "django-extensions",
    "django-flatblocks",
    "django-grappelli",
    "django-gravatar2",
    "django-honeypot",
    "django-ical",
    "django-simple-captcha",
    "django-storages",
    "djangorestframework",
    "gunicorn",
    "pillow",
    "probablepeople",
    "psycopg2-binary",
    "python-openid2",
    "requests",
    "six",
    "social-auth-app-django",
    "sorl-thumbnail",
    "whitenoise",
    "bleach",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pylint",
    "pylint-django",
    "pytest",
    "pytest-django",
]

[tool.hatch.build.targets.wheel]
packages = [
    "chipy_org",
]
exclude = [
    "*.pxi",
    "*.pyx",
]

[tool.black]
line-length = 100
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | dist
  | migrations
  | venv
)/
'''

[tool.isort]
atomic = true
include_trailing_comma = true
line_length = 100
multi_line_output = 3
skip = 'manage.py'
skip_glob = '**/migrations/*'
